--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@ docs/_build/
 # Compiled files.
 __pycache__
 
-#Pyinstaller files.
+# Pyinstaller files.
 /build/
 /dist/
 *.spec
+
+# Os files
+.Ds_store
