--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,17 @@ language: python
 addons:
   apt:
     packages:
-      - 'libsdl1.2-dev'
+      - python3-numpy
+      - libsdl-image1.2-dev
+      - libsdl-mixer1.2-dev
+      - libsdl-ttf2.0-dev
+      - libsmpeg-dev
+      - libsdl1.2-dev
+      - libportmidi-dev
+      - libswscale-dev
+      - libavformat-dev
+      - libavcodec-dev
+      - libfreetype6-dev
 
 matrix:
   include:
