--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,9 @@ addons:
       - libavcodec-dev
       - libfreetype6-dev
 
-matrix:
-  include:
-    - os: linux
-      dist: xenial
-    - os: osx
-      osx_image: xcode11
+os:
+  - linux
+  - osx
 
 stages:
   - compile
